--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -11372,6 +11372,9 @@
 					<show id="gs1:dutyFeeTaxAmountUnit" force="true" />
 					<show id="bcpg:startEffectivity" force="true" />
 					<show id="bcpg:endEffectivity" force="true" />
+					<show id="gs1:dutyFeeTaxAgencyCode" force="false" />
+					<show id="gs1:dutyFeeTaxTypeCode" force="false" />
+					<show id="gs1:dutyFeeTaxCategoryCode" force="false" />
 				</field-visibility>
 				<appearance>
 					<field id="gs1:dutyFeeTaxRef">
@@ -11410,6 +11413,9 @@
 					<show id="gs1:dutyFeeTaxAmountUnit" force="true" />
 					<show id="bcpg:startEffectivity" force="true" />
 					<show id="bcpg:endEffectivity" force="true" />
+					<show id="gs1:dutyFeeTaxAgencyCode" force="false" />
+					<show id="gs1:dutyFeeTaxTypeCode" force="false" />
+					<show id="gs1:dutyFeeTaxCategoryCode" force="false" />
 				</field-visibility>
 			</form>
 		</forms>
@@ -11674,6 +11680,7 @@
 					<show id="gs1:storageStateCode" />
 					<show id="gs1:catchMethodCode" />
 					<show id="gs1:catchAreaCode" />
+					<show id="gs1:catchCountryCode" />
 					<show id="gs1:fishCatchDateInformation" />
 				</field-visibility>
 			</form>
@@ -11713,6 +11720,7 @@
 					<show id="gs1:storageStateCode" />
 					<show id="gs1:catchMethodCode" />
 					<show id="gs1:catchAreaCode" />
+					<show id="gs1:catchCountryCode" />
 					<show id="gs1:fishCatchDateInformation" />
 				</field-visibility>
 			</form>
@@ -11728,9 +11736,9 @@
 					<show id="gs1:storageStateCode" />
 					<show id="gs1:catchMethodCode" />
 					<show id="gs1:catchAreaCode" />
+					<show id="gs1:catchCountryCode" />
 					<show id="gs1:fishCatchDateInformation" />
 				</field-visibility>
-
 			</form>
 		</forms>
 	</config>
