--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-gs1-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-gs1-form-config.xml
@@ -242,6 +242,7 @@
 					<field id="gs1:dutyFeeTaxRef">
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
 							<control-param name="showLink">false</control-param>
+							<control-param name="forceEditable">true</control-param>
 						</control>
 					</field>
 
@@ -278,6 +279,8 @@
 					<show id="gs1:dutyFeeTaxCode" />
 					<show id="gs1:dutyFeeTaxCountry" />
 					<show id="gs1:dutyFeeTaxRate" />
+					<show id="gs1:dutyFeeTaxAgencyCode" />
+					<show id="gs1:dutyFeeTaxTypeCode" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -320,6 +323,8 @@
 					<show id="gs1:dutyFeeTaxCode" />
 					<show id="gs1:dutyFeeTaxCountry" />
 					<show id="gs1:dutyFeeTaxRate" />
+					<show id="gs1:dutyFeeTaxAgencyCode" />
+					<show id="gs1:dutyFeeTaxTypeCode" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -343,6 +348,8 @@
 					<show id="gs1:dutyFeeTaxCode" />
 					<show id="gs1:dutyFeeTaxCountry" />
 					<show id="gs1:dutyFeeTaxRate" />
+					<show id="gs1:dutyFeeTaxAgencyCode" />
+					<show id="gs1:dutyFeeTaxTypeCode" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
