--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -3225,6 +3225,205 @@
 			</form>
 		</forms>
 	</config>
+	
+	<!-- bcpg:documentType type (creating nodes) -->
+	<config evaluator="model-type" condition="bcpg:documentType">
+		<forms>
+			<form>
+				<edit-form template="tab-edit" />
+				<field-visibility>
+					<show id="bcpg:charactName" />
+					<show id="cm:description" force="true" />
+					<show id="bcpg:docTypeIsMandatory" />
+					<show id="bcpg:docTypeIsValidityType" />
+					<show id="bcpg:docTypeAutoExpirationDate" force="true" />
+					<show id="bcpg:docTypeMandatoryFormula" force="true" />
+					<show id="bcpg:docTypeNameFormat" />
+					<show id="bcpg:docTypeLinkedTypes" force="true" />
+					<show id="bcpg:docTypeLinkedHierarchy" force="true" />
+					<show id="bcpg:docTypeLinkedCharacts" force="true" />
+					<show id="bcpg:docTypeDestPath" force="true" />
+					<show id="bcpg:isDeleted" force="true" />
+				</field-visibility>
+				<appearance>
+					<set id="documentType" appearance="bordered-panel" label-id="becpg.forms.set.document-type.label" />
+					<set id="documentTypeAutogeneration" appearance="bordered-panel" label-id="becpg.forms.set.document-type-autogeneration.label" />
+					
+					<field id="bcpg:charactName" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/textfield.ftl" />
+					</field>
+					<field id="cm:description" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/textarea.ftl" />
+					</field>
+					<field id="bcpg:docTypeIsMandatory" set="documentType" />
+					<field id="bcpg:docTypeIsValidityType" set="documentType" >
+						<constraint-handlers>
+							<constraint type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf" event='keyup,change@[
+									{"prop":"prop_bcpg_docTypeAutoExpirationDate", "condition" : "|NONE|MANUAL"}
+								]' />
+						</constraint-handlers>
+					</field>
+					<field id="bcpg:docTypeAutoExpirationDate" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/number-unit.ftl">
+							<control-param name="unit">d</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeMandatoryFormula" set="documentType" />
+					<field id="bcpg:docTypeNameFormat" set="documentType" />
+					<field id="bcpg:isDeleted" set="documentType" />
+					
+					<field id="bcpg:docTypeLinkedTypes" set="documentTypeAutogeneration" >
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/aclType</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeLinkedHierarchy" set="documentTypeAutogeneration" >
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">
+								becpg/autocomplete/allLinkedvalue/values/System/ProductHierarchy/bcpg:entityLists
+							</control-param>
+							<control-param name="extraPaths">prop_bcpg_docTypeLinkedTypes</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeLinkedCharacts" set="documentTypeAutogeneration" >
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:charact</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeDestPath" set="documentTypeAutogeneration" />
+				</appearance>
+			</form>
+
+			<form id="filter">
+				<field-visibility>
+					<show id="bcpg:charactName" />
+					<show id="bcpg:docTypeIsMandatory" />
+					<show id="bcpg:docTypeIsValidityType" />
+					<show id="bcpg:isDeleted" force="true" />
+				</field-visibility>
+				<appearance>
+					<field id="bcpg:charactName">
+						<control template="/org/alfresco/components/form/controls/textfield.ftl" />
+					</field>
+					<field id="bcpg:docTypeIsMandatory">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeIsValidityType">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+							<control-param name="isSearch">true</control-param>
+							<control-param name="insertBlank">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:isDeleted">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
+
+			<form id="datagrid">
+				<field-visibility>
+					<show id="bcpg:charactName" />
+					<show id="cm:description" force="true" />
+					<show id="bcpg:docTypeIsMandatory" />
+					<show id="bcpg:docTypeIsValidityType" />
+					<show id="bcpg:docTypeAutoExpirationDate" force="true" />
+					<show id="bcpg:docTypeMandatoryFormula" force="true" />
+					<show id="bcpg:docTypeNameFormat" />
+					<show id="bcpg:docTypeLinkedTypes" force="true" />
+					<show id="bcpg:docTypeLinkedHierarchy" force="true" />
+					<show id="bcpg:docTypeLinkedCharacts" force="true" />
+					<show id="bcpg:docTypeDestPath" force="true" />
+					<show id="bcpg:isDeleted" force="true" />
+				</field-visibility>
+			</form>
+		</forms>
+	</config>
+	
+	<!-- bcpg:documentType type (existing nodes) -->
+	<config evaluator="node-type" condition="bcpg:documentType">
+		<forms>
+			<form>
+				<edit-form template="tab-edit" />
+				<field-visibility>
+					<show id="bcpg:charactName" />
+					<show id="cm:description" force="true" />
+					<show id="bcpg:docTypeIsMandatory" />
+					<show id="bcpg:docTypeIsValidityType" />
+					<show id="bcpg:docTypeAutoExpirationDate" force="true" />
+					<show id="bcpg:docTypeMandatoryFormula" force="true" />
+					<show id="bcpg:docTypeNameFormat" />
+					<show id="bcpg:docTypeLinkedTypes" force="true" />
+					<show id="bcpg:docTypeLinkedHierarchy" force="true" />
+					<show id="bcpg:docTypeLinkedCharacts" force="true" />
+					<show id="bcpg:docTypeDestPath" force="true" />
+					<show id="bcpg:isDeleted" force="true" />
+				</field-visibility>
+				<appearance>
+					<set id="documentType" appearance="bordered-panel" label-id="becpg.forms.set.document-type.label" />
+					<set id="documentTypeAutogeneration" appearance="bordered-panel" label-id="becpg.forms.set.document-type-autogeneration.label" />
+					
+					<field id="bcpg:charactName" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/textfield.ftl" />
+					</field>
+					<field id="cm:description" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/textarea.ftl" />
+					</field>
+					<field id="bcpg:docTypeIsMandatory" set="documentType" />
+					<field id="bcpg:docTypeIsValidityType" set="documentType" >
+						<constraint-handlers>
+							<constraint type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf" event='keyup,change@[
+									{"prop":"prop_bcpg_docTypeAutoExpirationDate", "condition" : "|NONE|MANUAL"}
+								]' />
+						</constraint-handlers>
+					</field>
+					<field id="bcpg:docTypeAutoExpirationDate" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/number-unit.ftl">
+							<control-param name="unit">d</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeMandatoryFormula" set="documentType" />
+					<field id="bcpg:docTypeNameFormat" set="documentType" />
+					<field id="bcpg:isDeleted" set="documentType" />
+					
+					<field id="bcpg:docTypeLinkedTypes" set="documentTypeAutogeneration" >
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/aclType</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeLinkedHierarchy" set="documentTypeAutogeneration" >
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">
+								becpg/autocomplete/allLinkedvalue/values/System/ProductHierarchy/bcpg:entityLists
+							</control-param>
+							<control-param name="extraPaths">prop_bcpg_docTypeLinkedTypes</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeLinkedCharacts" set="documentTypeAutogeneration" >
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:charact</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:docTypeDestPath" set="documentTypeAutogeneration" />
+				</appearance>
+			</form>
+		</forms>
+	</config>
 
 	<!-- bcpg:plant type (existing nodes) -->
 	<config evaluator="node-type" condition="bcpg:plant">
