--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -11068,6 +11068,38 @@
 			</form>
 		</forms>
 	</config>
+	
+	<config evaluator="aspect" condition="bcpg:documentAspect">
+		<forms>
+			<form>
+				<field-visibility>
+					<show id="bcpg:documentState" />
+					<show id="bcpg:documentIsMandatory" />
+					<show id="bcpg:documentTypeRef" />
+					<show id="bcpg:documentEntityRef" />
+				</field-visibility>
+				<appearance>
+					<set id="documentType" appearance="bordered-panel" label-id="becpg.forms.set.documentType.label"
+						template="/org/alfresco/components/form/2-column-set.ftl" />
+						
+					<field id="bcpg:documentState" set="documentType" />
+					<field id="bcpg:documentIsMandatory" set="documentType" />
+					<field id="bcpg:documentTypeRef" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:documentType
+							</control-param>
+						</control>
+					</field>
+					<field id="bcpg:documentEntityRef" set="documentType" >
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:entityV2
+							</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
+		</forms>
+	</config>
 
 
 	<config evaluator="aspect" condition="bcpg:supplierAspect">
