--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-share-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-share-form-config.xml
@@ -87,46 +87,103 @@
                <show id="cm:title" force="true" />
                <show id="cm:description" force="true" />
                <show id="mimetype" />
+               
+               <show id="bcpg:documentState" />
+			   <show id="bcpg:documentIsMandatory" />
+               <show id="bcpg:documentTypeRef" />
+               <show id="bcpg:documentEntityRef" />
+               
+               <show id="cm:created" />
+               <show id="cm:creator" />
                <show id="cm:modified" />
                <show id="cm:modifier" />
+                
+               <show id="cm:from" force="true" />
                <show id="cm:to" force="true" />
             </field-visibility>
             <appearance>
-               <field id="cm:name">
+            	
+            	<set id="mainInfo" appearance="bordered-panel"
+					label-id="becpg.forms.set.designation.label" template="/org/alfresco/components/form/2-column-set.ftl" />
+				<set id="documentType" appearance="bordered-panel"
+					label-id="becpg.forms.set.document-type.label" template="/org/alfresco/components/form/2-column-set.ftl" />
+				<set id="effectivity" appearance="bordered-panel" label-id="becpg.forms.set.effectivity.label"
+					template="/org/alfresco/components/form/2-column-set.ftl" />
+				<set id="audit" appearance="bordered-panel" label-id="becpg.forms.set.audit.label"
+					template="/org/alfresco/components/form/2-column-set.ftl" />
+				
+               <field id="cm:name" set="mainInfo">
 					<control>
 						<control-param name="forceEditable">true</control-param>
 					</control>               
                </field>
-               <field id="cm:title">
+               <field id="cm:title" set="mainInfo">
 					<control>
 						<control-param name="forceEditable">true</control-param>
 					</control>               
                </field>
-               <field id="cm:description">
+               <field id="cm:description" set="mainInfo">
 					<control>
 						<control-param name="forceEditable">true</control-param>
 					</control>               
                </field>
-               <field id="mimetype">
+               <field id="mimetype" set="mainInfo">
                   <control template="/org/alfresco/components/form/controls/mimetype.ftl" >
 					<control-param name="forceEditable">true</control-param>
 				</control>               
                </field>
-               <field id="cm:modifier">
-                  <control>
-                     <control-param name="forceEditable">true</control-param>
-                  </control>
-               </field>
-               <field id="cm:modified">
+               
+                <field id="cm:from" set="effectivity">
                   <control template="/org/alfresco/components/form/controls/daterange.ftl" >
 					<control-param name="forceEditable">true</control-param>
                   </control>
                </field>
-               <field id="cm:to">
+               
+               <field id="cm:to" set="effectivity">
                   <control template="/org/alfresco/components/form/controls/daterange.ftl" >
 					<control-param name="forceEditable">true</control-param>
                   </control>
                </field>
+               
+              	<field id="bcpg:documentState" set="documentType" />
+				<field id="bcpg:documentIsMandatory" set="documentType" >
+					<control template="/org/alfresco/components/form/controls/selectone.ftl">
+						<control-param name="insertBlank">true</control-param>
+						<control-param name="isSearch">true</control-param>
+						<control-param name="options">true|data.boolean.true,false|data.boolean.false
+						</control-param>
+					</control>
+				</field>
+				<field id="bcpg:documentTypeRef" set="documentType" >
+					<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+						<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:documentType
+						</control-param>
+					</control>
+				</field>
+				<field id="bcpg:documentEntityRef" set="documentType" >
+					<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+						<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:entityV2
+						</control-param>
+					</control>
+				</field>
+               
+               <field id="cm:modifier" set="audit">
+					<control>
+						<control-param name="forceEditable">true</control-param>
+					</control>
+				</field>
+				
+				<field id="cm:modified" set="audit">
+					<control template="/org/alfresco/components/form/controls/daterange.ftl" />
+				</field>
+				<field id="cm:creator" set="audit">
+					<control>
+						<control-param name="forceEditable">true</control-param>
+					</control>
+				</field>
+				<field id="cm:created" set="audit">
+					<control template="/org/alfresco/components/form/controls/daterange.ftl" />
+				</field>
             </appearance>
          </form>
       </forms>
