Fix #27826 - [Feature] Added spel formula to charact exports

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1601,6 +1601,20 @@
 					<show id="bcpg:isDeleted" />
 				</field-visibility>
 			</form>
+			
+			<form id="datagrid">
+				<field-visibility>
+					<show id="bcpg:charactName" />
+					<show id="bcpg:legalName" />
+					<show id="bcpg:costType" />
+					<show id="bcpg:costCurrency" />
+					<show id="bcpg:costFixed" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:erpCode" force="true" />
+					<show id="bcpg:isDeleted" />
+					<show id="bcpg:costFormula" />
+				</field-visibility>
+			</form>
 		</forms>
 	</config>
 	
@@ -2693,6 +2707,24 @@
 					<show id="bcpg:color" />
 				</field-visibility>
 			</form>
+			
+			<form id="export">
+				<field-visibility>
+					<show id="gs1:nutrientTypeCode" force="true" />
+					<show id="bcpg:charactName" />
+					<show id="bcpg:legalName" />
+					<show id="bcpg:nutGroup" />
+					<show id="bcpg:nutType" />
+					<show id="bcpg:nutUnit" />
+					<show id="bcpg:nutGDA" />
+					<show id="bcpg:nutUL" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:erpCode" force="true" />
+					<show id="rep:reportLocales" />
+					<show id="bcpg:isDeleted" />
+					<show id="bcpg:nutFormula" />
+				</field-visibility>
+			</form>
 		</forms>
 	</config>
 
@@ -2996,6 +3028,22 @@
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
+				</field-visibility>
+			</form>
+			
+			<form id="export">
+				<field-visibility>
+					<show id="bcpg:physicoChemCode" />
+					<show id="bcpg:charactName" />
+					<show id="bcpg:legalName" />
+					<show id="bcpg:physicoChemUnit" />
+					<show id="bcpg:physicoChemType" />
+					<show id="bcpg:physicoChemFormulated" />
+					<show id="bcpg:physicoChemFormulatedFromVol" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:erpCode" force="true" />
+					<show id="bcpg:isDeleted" />
+					<show id="bcpg:physicoChemFormula" />
 				</field-visibility>
 			</form>
 		</forms>
@@ -4541,6 +4589,21 @@
 			<form id="sub-datagrid">
 				<field-visibility>
 					<show id="cm:description" force="true" />
+				</field-visibility>
+			</form>
+			
+			<form id="export">
+				<field-visibility>
+					<show id="bcpg:labelClaimCode" />
+					<show id="bcpg:charactName" />
+					<show id="bcpg:legalName" />
+					<show id="bcpg:labelClaimType" />
+					<show id="rep:reportLocales" force="true" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:erpCode" force="true" />
+					<show id="bcpg:isDeleted" />
+					<show id="cm:content" />
+					<show id="bcpg:labelClaimFormula" />
 				</field-visibility>
 			</form>
 		</forms>
